--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,21 +1,23 @@
 {{ define "main" }}
 
-<div class="article-meta">
-  <h1><span class="title">{{ .Title }}</span></h1>
-  <h3><span class="subtitle">{{ .Params.subtitle }}</span></h3>
-  {{ with .Params.author }}<h2 class="author">{{ . }}</h2>{{ end }}
-  {{ if .Params.date }}<h3 class="date" style="font-size: 1.25em;">{{ .Date.Format "January 2, 2006" }}</h2>{{ end }}
 
-  <!-- tags -->
+<div class="article-meta">
+
+  <h1 id="title">{{ .Title }}</h1>
+  {{ with .Params.author }}<h2 id="author">{{ . }}</h2>{{ end }}
+  {{ if .Params.date }}
+    <h3 class="date">{{ .Date.Format "January 2, 2006" }}
+  {{ end }}
+
   {{ if .Params.tags }}
-    <p class="tags">
-      <i class="fa fa-tags" aria-hidden="true"></i> &nbsp;
+    <div class="tags">
+      <i class="fas fa-tags" aria-hidden="true"></i> &nbsp;
       {{ range .Params.tags }}
         <a href="/tags/{{ . | urlize }}"> <kbd class="item-tag">{{ . }}</kbd></a>
       {{ end }}
-    </p>
+    </div>
   {{ end }}
-  <!-- END tags -->
+
 
   <!-- topics -->
   {{ if .Params.topics }}
@@ -32,6 +34,9 @@
 
 </div>
 
-{{ .Content }}
+<div class="article-main">
+  {{ .Content }}
+</div>
+
 
 {{ end }}
