--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,7 +21,7 @@
         <div class="ctn-main-content">
 
             <div class="ctt-main-content">
-                <div class="title"> {{ .Title }}</div>
+                <h1 id="title"> {{ .Title }}</h1>
                 {{ .Content }}
             </div>
 
@@ -33,10 +33,7 @@
             </div>
         </div>
 
-
-
     </div>
-
 
 </body>
 
