--- a/assets/scss/libs/vars.scss
+++ b/assets/scss/libs/vars.scss
@@ -1,12 +1,13 @@
 // Font-size 
-$ftsz1: 3em;
+$ftsz1: 2.8em;
 $ftsz2: 2.4em;
 $ftsz3: 2em;
 $ftsz4: 1.8em;
 $ftsz5: 1.6em;
 $ftsz6: 1.2em;
 $ftsz7: 1em;
-$ftsz8: .8em;
+$ftsz8: .9em;
+$ftsz9: .8em;
  
 // Colors 
 // https://design-milk.com/color-palettes-inspired-hayao-miyazakis-films/
@@ -18,6 +19,8 @@ $prim5: #d5ba9c;
 
 $seco4: lighten($prim4, 45);
 $seco5: lighten($prim5, 25);
+
+$thir4: darken($seco4, 25);
 
 // responsive
 $large-low: "only screen and (max-width: 2200px)";
