--- a/layouts/partials/sidebar-secondary.html
+++ b/layouts/partials/sidebar-secondary.html
@@ -1,18 +1,15 @@
-<h1><a href="#"><i class='far fas fa-chevron-circle-up'></i></a></h1>
+<h1><a href="#"><i class='far fas fa-chevron-up'></i></a></h1>
 
-<script src="js/sidebar-secondary.js"></script>
+<script src="/js/sidebar-secondary.js"></script>
 
 <h1>
     <a onclick="scrollToBottom()">
-        <i class='far fas fa-chevron-circle-down'></i>
+        <i class='far fas fa-chevron-down'></i>
     </a>
 </h1>
 
-
-
 <script>
     scrollingElement = (document.scrollingElement || document.body)
-
     function scrollToBottom() {
         scrollingElement.scrollTop = scrollingElement.scrollHeight;
     }
