improve dropdown primary sidebar

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,7 @@
 @import "libs/main-content.scss";
 
 body {
+    height: 100vh;
     margin: 0px;
     padding: 0px;
     font-family: 'Fira Sans', sans-serif;
