--- a/assets/scss/libs/main-content.scss
+++ b/assets/scss/libs/main-content.scss
@@ -17,6 +17,7 @@
 .ctt-main-content {
     width: 100%;
     padding: 10px 20px 10px 40px;
+    margin-bottom: 4vh;
     color: $prim2;
 
     a {
@@ -106,9 +107,32 @@
         font-size: $ftsz9;
     }
 
-    .bottom-spacing {
-        min-height: 100px;
-    }
 
 }
 
+
+.footer2 {
+    display: none;
+    @media #{$small-low} {
+        display: block;
+    }
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 25px;
+    padding-right: 25px;
+    width: 100%;
+    text-align: center;
+    background-color: $prim2;
+    color: $seco4;
+    ai, i {
+        color: inherit;
+    }
+    button, a {
+        color: inherit;
+        text-decoration: none;
+        outline: 2;
+        &:hover {
+            color: $prim5;
+        }
+    }
+}
