--- a/assets/scss/libs/sidebar-primary.scss
+++ b/assets/scss/libs/sidebar-primary.scss
@@ -1,6 +1,6 @@
 .ctn-sidebar-primary {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: row wrap;
     width: 20%;
     background-color: $prim2;
     min-height: 100vh;
@@ -39,14 +39,15 @@
     }
     a {
         color: inherit;
-        text-decoration: underline;
-        text-decoration-color: $prim5;
+        text-decoration: none;
+        color: $prim5;
         &:hover {
             color: $thir4;
         }
         i, ai {
             text-decoration: inherit;
             text-decoration-color: inherit;
+            color: inherit;
             &:hover {
                 color: inherit;
             }
@@ -55,16 +56,21 @@
     button {
         font: inherit;
         background-color: inherit;
-        color: inherit;
+        color: $thir4;
         border: 0px;
-        padding: inherit;
+        padding: inherit;  
     }
     h2, h3 {
         button, a {
+            color: inherit;
             text-decoration: none;
+            outline: 2;
             &:hover {
                 color: $prim5;
             }
+        }
+        i, ai {
+            color: $prim5;
         }
     }
     h3 {
@@ -73,16 +79,15 @@
         padding-left: 30px;
     }
 
-    #dropdown {
+    .dropdown {
         width: 100%;
         display: none;
-        text-align: center;
     }
 }
 
 
 .footer  {
-    margin-top: 100px;
+    padding-top: 10vh;
     font-size: $ftsz7;
     i, ai {
         font-size: inherit;
