--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,7 +26,9 @@
                 {{ end }}
             </div>
 
-            <div class="bottom-spacing"></div>
+            <div class="footer2">
+                {{ partial "footer.html" . }}
+            </div>
 
         </div>
 
