--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,7 +23,21 @@
             <div class="ctt-main-content">
                 <h1 id="title"> {{ .Title }}</h1>
                 {{ .Content }}
+
+                <h3> <i class="fa fa-code" aria-hidden="true"></i>&nbsp;Latest <a href="/posts/">Post</a> </h3>
+                {{ range where .Site.Pages.ByDate.Reverse ".Type" "==" "post" | first 1 }}
+                    <h4 style="font-weight:bolder;">
+                        <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+                    </h4>
+                {{ end }}
+
             </div>
+
+            <div class="footer2">
+                {{ partial "footer.html" . }}
+            </div>
+
+            
 
         </div>
 
