--- a/assets/scss/libs/main-content.scss
+++ b/assets/scss/libs/main-content.scss
@@ -18,6 +18,7 @@
     width: 100%;
     padding: 10px 20px 10px 40px;
     margin-bottom: 4vh;
+    font-size: $ftsz7;
     color: $prim2;
 
     a {
@@ -58,15 +59,6 @@
                 color: $prim5;
             }
         }
-    }
-
-
-
-    kbd {
-        font-family: "Fira Code";
-        color: $prim1;
-        border-radius: 6px;
-        border: 4px solid $prim1;
     }
 
     .article-meta {
