--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -46,7 +46,7 @@ code {
     font-family: 'Fira Code', monospace; 
 }
 
-.chroma {
+.highlight {
     line-height: 1.5;
     code {
         margin-right: 48px;
