--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,2 @@
-Website built with <a href="https://gohugo.io/">Hugo</a>. <i class='fas fa-code'></i> available on <a href="https://github.com/KevCaz/funkyflex"><i class='fab fa-github'></i></a>, content released under <a href="https://creativecommons.org/publicdomain/zero/1.0">
-<i class='fab fa-creative-commons'></i> <i class='fab fa-creative-commons-zero'></i></a> unless otherwise specified.
-
+{{ .Site.Params.footer | markdownify  }}
 
