improve primary sidebar

--- a/assets/scss/libs/sidebar-primary.scss
+++ b/assets/scss/libs/sidebar-primary.scss
@@ -86,6 +86,10 @@
         width: 100%;
         display: none;
     }
+    .dropdown-cuurent {
+        width: 100%;
+        display: block;
+    }
     .primary-sidebar-premenu {
         display: none;
         @media #{$small-low} {
