--- a/layouts/partials/sidebar-primary.html
+++ b/layouts/partials/sidebar-primary.html
@@ -7,12 +7,15 @@
 <div class="primary-sidebar-menu" id="p-s-menu">
     
 {{ if .Site.Menus.main }} 
+    {{ $url := urls.Parse $.Permalink }}
+    {{ $loc := $url.Path | replaceRE "/([^/]+).*" "$1"  }}
     {{ range sort .Site.Menus.main }}
+        {{ $cur := .URL | replaceRE "/([^/]+).*" "$1" }}
         {{ if .HasChildren }}
-
             {{ $i := false }}
             {{ range .Children }}
-                {{ if eq (relURL $.Permalink) (relURL .URL) }} 
+                {{ $var := findRE .URL $url.Path }}
+                {{ if $var }} 
                     {{ $i = true }}
                 {{ end }}
             {{ end }}
@@ -23,23 +26,24 @@
             </button>
             </h2>
 
-            <div class="dropdown" id="dropdown-{{  .Identifier }}">
+            {{ if $i }}
+            <div class="dropdown-current" id="dropdown-{{ .Identifier }}">
+            {{ else }}
+            <div class="dropdown" id="dropdown-{{ .Identifier }}">
+            {{ end }}
                 {{ range .Children }}
-                    {{ if eq (relURL $.Permalink) (relURL .URL) }} 
+                    {{ $var := findRE .URL $url.Path }}
+                    {{ if $var }} 
                     <h3 id="current">
                     {{ else }}
                     <h3>
                     {{ end }}
-                    <a href="{{ .URL }}"> {{ .Name | markdownify }} </a></h3>
+                    <a href="{{ .URL }}"> {{ .Name | markdownify }}</a></h3>
                 {{ end }}
             </div>
         {{ else }}
-            {{ if eq (relURL $.Permalink) (relURL .URL) }} 
-            <h2 id="current">
-            {{ else }}
-            <h2>
-            {{ end }}
-            <a href="{{ .URL }}"> {{ .Name | markdownify }} </a>
+            {{ if eq $loc $cur }}<h2 id="current">{{ else }}<h2>{{ end }}
+            <a href="{{ .URL }}">{{ .Name | markdownify }}</a>
             </h2>
         {{ end }}
 
