--- a/assets/scss/libs/sidebar-primary.scss
+++ b/assets/scss/libs/sidebar-primary.scss
@@ -11,10 +11,11 @@
     }
 
     @media #{$small-low} {
-        padding: 0px;
         width: 100%;
         text-align: center;
-        min-height: 8vh;
+        min-height: 15vh;
+        display: flex;
+        flex-direction: column;
     }
 
 }
@@ -24,18 +25,19 @@
     width: 100%;
     font-size: $ftsz7;
     @media #{$small-low} {
-        padding: 4px;
+        padding: 10px 0px 10px 0px;
         h1 {
-            margin-bottom: 2vh !important;
+            margin: 1vh 0vh 1vh 0vh;
         }
         .primary-sidebar-menu {
             display: none;
+            padding: 4px;
         }
     }
-    padding: 10px 5px 10px 16px;
     h1 {
         font-family: "AMA";
         margin-bottom: 4vh;
+        padding: 4px;
     }
     i, ai {
         font-size: inherit;
@@ -65,6 +67,7 @@
         padding: inherit;  
     }
     h2, h3 {
+        margin: 1vh 0vh 2vh 0vh;
         button, a {
             color: inherit;
             text-decoration: none;
@@ -90,11 +93,16 @@
         width: 100%;
         display: block;
     }
+    .primary-sidebar-menu {
+        padding: 4px 4px 2px 12px;
+    }
     .primary-sidebar-premenu {
         display: none;
+        font-size: $ftsz7;
         @media #{$small-low} {
             display: block;
         }
+        margin: 1vh 0vh 1vh 0vh;
     }
     #current {
         color: $prim5;
