--- a/assets/scss/libs/vars.scss
+++ b/assets/scss/libs/vars.scss
@@ -9,6 +9,7 @@ $ftsz7: 1.4em;
 $ftsz8: 1.2em;
 $ftsz9: 1em;
 $ftsz10: .8em;
+$ftsz11: .5em;
  
 // Colors 
 // https://design-milk.com/color-palettes-inspired-hayao-miyazakis-films/
