--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -41,7 +41,7 @@ kbd {
     border: 4px solid $prim1;
 }
 
-code { 
+p code { 
     font-family: 'Fira Code', monospace;
     color: $prim3;
     background-color: $thir5;
