--- a/assets/scss/libs/main-content.scss
+++ b/assets/scss/libs/main-content.scss
@@ -47,6 +47,10 @@
         text-align: center;
         font-size: $ftsz1;
         font-family: "AMA";
+        code {
+            font-family: "Fira Code", monospace;
+            color: $prim3;
+        }
     }
 
     h1 {
