--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
 
 <div class="article-meta">
 
-  <h1 id="title">{{ .Title }}</h1>
+  <h1 id="title">{{ .Title | markdownify }}</h1>
   {{ with .Params.author }}<h2 id="author">{{ . }}</h2>{{ end }}
   {{ if .Params.date }}
     <h3 class="date">{{ .Date.Format "January 2, 2006" }}
