--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -53,7 +53,10 @@ p code {
 .highlight {
     line-height: 1.5;
     code {
-        margin-right: 48px;
+        margin-right: 36px;
+    }
+    pre {
+        margin: 1vh 0vh 1vh 0vh;
     }
 }
 
