minor size tweaks

--- a/assets/scss/libs/vars.scss
+++ b/assets/scss/libs/vars.scss
@@ -19,6 +19,7 @@ $prim3: #b95821;
 $prim4: #2b5297;
 $prim5: #d5ba9c;
 
+$seco3: lighten($prim3, 30);
 $seco4: lighten($prim4, 45);
 $seco5: lighten($prim5, 25);
 
