--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,2 +1,9 @@
-{{ .Site.Params.footer | markdownify  }}
+<div class="social-media-banner">
+    {{ partial "media-social-banner.html" . }}    
+</div>
+
+<div class="footer-custom">
+    {{ .Site.Params.footer | markdownify }}
+</div>
+
 
