--- a/layouts/partials/media-social-banner.html
+++ b/layouts/partials/media-social-banner.html
@@ -14,7 +14,7 @@
 <a href="https://www.linkedin.com/in/{{ . }}"><i class='fab fa-linkedin'></i></a>
 {{ end }}
 {{ with .Site.Params.twitter }}
-<a href="https://twitter.com/{{ . }}"><i class='fa-twitter-square'></i></a>
+<a href="https://twitter.com/{{ . }}"><i class='fab fa-twitter-square'></i></a>
 {{ end }}
 {{ with .Site.Params.facebook }}
 <a href="https://www.facebook.com/public/{{ . }}"><i class='fab fa-facebook-square'></i></a>
