--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<hr align="left" style="width:25%">
+<hr id="hr-footer" align="left">
 <div class="social-media-banner">
     {{ partial "media-social-banner.html" . }}    
 </div>
