--- a/assets/scss/libs/sidebar-primary.scss
+++ b/assets/scss/libs/sidebar-primary.scss
@@ -133,5 +133,10 @@
     @media #{$small-low} {
         display: none;
     }
-  ;
+    #hr-footer {
+        width: 40%;
+        color: transparent;
+        height: 2px;
+        background-color: $seco4;
+    }
 }
