review code style in li

--- a/assets/scss/libs/main-content.scss
+++ b/assets/scss/libs/main-content.scss
@@ -62,6 +62,7 @@
         .date {
             color: $prim1;
             font-size: $ftsz10;
+            padding-left: 12px;
         }
         ol li {
             font-size: $ftsz8;
