--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,6 +23,12 @@
             <div class="ctt-main-content">
                 <h1 id="title"> {{ .Title }}</h1>
 
+                <div class="listings pubs">
+                    <ol>
+                        <li><a href="cool">cool</a></li>
+                    </ol>
+                </div>
+
                 <div class="ctt-main-content">
                      <div class="article-main">
                         {{ .Content }}
