--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,8 +9,7 @@ body {
     padding: 0px;
     font-family: 'Fira Sans', sans-serif;
     font-weight: 400;
-    font-size: 1em;
-    line-height: 1.25;
+    line-height: 1.20;
     scroll-behavior: smooth;
 }
 
@@ -28,16 +27,16 @@ p {
 }
 
 h1{
-    margin: 72px 0vh 36px 0vh;
-}
-h2 {
-    margin: 48px 0vh 24px 0vh;
-}
-h3 {
     margin: 36px 0vh 18px 0vh;
 }
-h4, h5 {
+h2 {
+    margin: 30px 0vh 15px 0vh;
+}
+h3 {
     margin: 24px 0vh 12px 0vh;
+}
+h4, h5 {
+    margin: 12px 0vh 6px 0vh;
 }
 
 blockquote {
@@ -51,13 +50,18 @@ mark {
     background-color: $seco4;
 }
 
+i, ai {
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
 kbd {
     font-family: "Fira Code", monospace;;
     color: $prim1;
     border-radius: 6px;
-    padding-left: 4px;
-    padding-right: 4px;
-    border: 4px solid $prim1;
+    padding-left: 3px;
+    padding-right: 3px;
+    border: 2px solid $prim1;
 }
 
 .ctn-progress-bar {
@@ -116,8 +120,8 @@ img, iframe, video {
 /* Table */
 table {
   margin: auto;
-  border-top: 6px solid $prim2;
-  border-bottom: 6px solid $prim2;
+  border-top: 4px solid $prim2;
+  border-bottom: 4px solid $prim2;
 }
 th, td { 
     padding: 6px; 
@@ -126,7 +130,7 @@ thead, tfoot {
     background: $seco4;
 }
 th {
-    border-bottom: 3px solid $prim2;
+    border-bottom: 2px solid $prim2;
 }
 tr:nth-child(even) { 
     background: $thir5; 
