--- a/assets/scss/libs/sidebar-secondary.scss
+++ b/assets/scss/libs/sidebar-secondary.scss
@@ -18,12 +18,13 @@
 }
 
 .ctt-sidebar-secondary {
-    width: 15%;
+    width: 12%;
     display: flex;
     flex-flow: row wrap;
     position: fixed;
     top: 25px;
     right: 0;
+    padding: 0px;
 
     a {
         color: inherit;
@@ -52,6 +53,6 @@
     }
 
     @media #{$large-low} {
-        width: 20%;
+        width: 18%;
     }
 }
