increase size of icons in banner

--- a/assets/scss/libs/main-content.scss
+++ b/assets/scss/libs/main-content.scss
@@ -49,6 +49,11 @@
             font-family: "Fira Code", monospace;
             color: $prim3;
         }
+        i, ai {
+            padding-left: 4px;
+            padding-right: 4px;
+        }
+        
     }
 
     h1 {
